@@ -126,6 +126,7 @@
     ind$oecosimu <- list(z = z, means = means, pval = p, simulated=simind,
                          method=method, statistic = indstat,
                          alternative = alternative, isSeq = attr(x, "isSeq"))
+    attr(ind, "call") <- match.call()
     class(ind) <- c("oecosimu", class(ind))
     ind
 }
